# nba-shot-quality

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
app/: streamlit_app.py
docs/: case_study.md  data_dictionary.md  portfolio_brief.md
scripts/: run_poe.sh  run_rapm.sh  run_xpoints.sh  validate_pbp_rotations.py
src/nba_shot_quality/: app_artifacts.py  cli.py
src/nba_shot_quality/analysis/: coaching_changes.csv  coaching_event_study.py
src/nba_shot_quality/eval/: calibration.py  poe_stability.py  rapm_eval.py
src/nba_shot_quality/features/: shot_features.py  shot_lineups.py
src/nba_shot_quality/ingest/: box_matchups.py  matchups.py  pbp_rotations.py  player_stats.py  rotations.py  shotlogs.py  team_game_logs.py
src/nba_shot_quality/models/: poe.py  rapm.py  xpoints.py
static/: app.js  index.html  styles.css
static/data/: archetype_summary.csv  coaching_did_results.csv  coaching_did_summary.csv  data_manifest.csv  leaderboard.csv  leaderboard_2022-23.csv  leaderboard_2023-24.csv  leaderboard_2024-25.csv  model_evidence.csv  player_profiles.csv  player_profiles_2022-23.csv  player_profiles_2023-24.csv  player_profiles_2024-25.csv  rapm_pooled.csv  season_summary.csv
tests/: test_app_artifacts.py  test_app_data.py  test_coaching_event_study.py  test_poe.py  test_shot_features.py
