[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-shot-quality"
version = "0.1.0"
description = "NBA shot quality and defender impact model"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
